# VolgaIT_Grand_Challenge

./: .gitignore  CMakeLists.txt  README.md  completed.txt  main.cpp
emulator/: Car.hpp  Circle.hpp  Direction.hpp  Emulator.cpp  Emulator.hpp  Gear.hpp  Lane.hpp  Loader.cpp  Loader.hpp  Location.hpp  Mode.hpp  Processor.cpp  Processor.hpp  Road.hpp  State.hpp  TrafficSign.hpp  Unit.hpp  Vehicle.hpp
work/Aplication/: aplication.cpp  aplication.hpp
work/Application/: application.cpp
